Fixade horizontal scroller

--- a/css/style.css
+++ b/css/style.css
@@ -113,10 +113,6 @@ h1 {
     height: 100vh;
     box-shadow: 0px 0px 10px 8px rgba(0,0,0,0.05);
     position: relative;
-    padding-left: 5em;
-    padding-right: 5em;
-    padding-top: 5em;
-    padding-bottom: 8em;
 }
 
 .arrow {
@@ -215,7 +211,12 @@ h3 {
 }
 
 .s3 h2 {
+    display: flex;
+    justify-self: center;
     margin-bottom: 1.5em;
+    margin-left: 2em;
+    margin-top: 1.5em;
+    width: 80%;
 }
 
 .card-arrow {
@@ -224,25 +225,22 @@ h3 {
 }
 
 .card-wrapper {
-    max-width: 80%;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 21%;
 
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
+    overflow-x: auto;
+    overscroll-behavior-inline: contain;
 }
 
 .card {
     background-color: var(--gray);
     border-radius: 15%;
     align-items: center;
+    width: 15vw;
     display: flex;
+    align-items: center;
     flex-direction: column;
-    padding-top: 1em;
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-bottom: 2em;
-    flex-grow: 0;
-    flex-shrink: 0;
+
+    margin-bottom: 2em;
 }
